src/routes/hn/style.module.css
.hn {
  padding-top: 60px;
  margin: 0px 20%;
  padding-left: 0px;
}

.hn-post-title {
  font-size: 1.2em;
  display: flex;
  justify-content: flex-start;
  align-items: center;
  min-height: 50px;
  border-bottom: 2px solid;
}
.hn-post-comments-link {
  display: flex;
  width: 30%;
  height: 100%;
  justify-content: flex-end;
}
.hn-post-comments-link img {
  vertical-align: middle;
}

.hn-post-back {
  padding-right: 10px;
  height: 100%;
}

.hn-post-list {
  list-style: none;
}

.hn-post {
  display: flex;
  justify-content: space-between;
  align-items: center;
  min-height: 50px;
  border-bottom: 1px solid;
}
.hn-post a:hover {
  color: black;
  text-decoration: none;
}

.hn-comment {
  height: 100%;
  padding-top: 20px;
  padding-bottom: 20px;
  border-bottom: 1px solid;
}

.hn-comment a {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.hn-comment-count {
  margin-left: auto;
  align-self: flex-end;
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 50%;
  min-width: 20px;
  min-height: 20px;
  width: 20px;
  height: 20px;
  padding: 5px;
  border: 1px solid;
  text-align: center;
  font-size: 12px;
  font-weight: bold;
}

pre {
  background-color: #f6f8fa;
}

@media (max-width: 768px) {
  .hn {
    margin: 0;
  }

  .hn-post {
    min-height: 100px;
    padding: 0px 5%;
  }

  .hn-comment {
    cursor: pointer;
    height: 100%;
    padding-top: 20px;
    padding-bottom: 20px;
  }

  .hn-post-comments-link {
    min-width: 80px;
  }
  .hn-post-title {
    font-size: 1.2em;
    justify-self: center;
    text-align: center;
    height: 100%;
    padding-top: 10px;
    padding-bottom: 20px;
  }
}

